# QuantumBrush

./: .gitignore  Hackathons.md  QuantumBrush.spec  QuantumInterference.md  README.md  README_NEW.md  REVIEWER_FIXES.md  RunQuantumBrush.bat  RunQuantumBrush.sh  deploy_native.sh  diagnostic.py  diagnostic2.py  diagnostic3.py  generate_icon.py  helper.py  index.html  install.sh  install_conda.sh  main.py  mock_stroke.json  package-lock.json  package.json  qpixl.py  requirements-effects.txt  requirements-packenv.txt  requirements.txt  run-original-legacy.bat  run_native.sh  run_native_conda.sh  setup.sh  shrink_bundle.sh  temp_path.txt  tree.txt  update.sh
.playwright-mcp/: page-2026-06-16T14-17-17-939Z.yml  page-2026-06-16T14-57-48-310Z.yml
UnitaryDesign/: DJ.py  GoverEducation.py  UnitaryDesign.md  WithoutSimulator.py  aurora.py  config.py  gallery.py  gate_engine.py  main.py  mode.py  painter.py  postprocessing.py  quantum_canvas_studio.py  quantum_report.txt  report.py  utils.py
backend/: api.py  apply_effect.py
build/: manifest.mf
config/: python_path.txt
docs/: in-memory-stroke-transport.md  modern-workspace-prototype.html  modern-workspace-prototype.md
effect/: apply_effect.py  effect_server.py  make_mock.py  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: effect.rs  mod.rs  project.rs  python.rs  stroke.rs
src-tauri/src/models/: effect.rs  mod.rs  project.rs  stroke.rs
src-tauri/src/services/: file_service.rs  image_service.rs  mod.rs  python_service.rs
(+322 files in other folders)
