[package]
name = "quantum-brush"
version = "0.1.0"
description = "QuantumBrush - Quantum Computing Art Application"
authors = ["QuantumBrush Team"]
edition = "2021"

[lib]
name = "quantum_brush_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
image = "0.25"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "blocking"] }
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
